<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="ContentDescription"
    android:id="@+id/userProfileCL"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.userprofile.UserProfileActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="411dp"
        android:layout_height="347dp"
        android:background="@drawable/gradientbackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/user_Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="User Name"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/profileBlank"
            app:layout_constraintStart_toStartOf="@+id/profileBlank"
            app:layout_constraintTop_toBottomOf="@+id/profileBlank" />

        <TextView
            android:id="@+id/userRealName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="User Full Name"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
...
            android:hint="Name"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profileBlank" />

        <TextView
            android:id="@+id/userHeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:text="Height - 69in "
            android:textColor="@color/white"
            android:textStyle="bold"
...
            android:hint="Height(in) "
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userRealNameET" />

        <TextView
            android:id="@+id/userWeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="Weight - 150lbs"
            android:textColor="@color/white"
            android:textStyle="bold"
...
